considering lists of enums in path params